Basic setup for assertj swing testing